k8s/base/aspire/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aspire
  labels:
    istio.io/dataplane-mode: ambient
