k8s/base/aspire/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: otlp
      protocol: TCP
      port: 4317
      targetPort: otlp
